<resources>
    <string name="app_name">串口Demo</string>

    <string name="serial_clear">清除</string>
    <string name="info_hint_please_input">请输入</string>
    <string name="serial_load_command">导入</string>
    <string name="serial_read">接收</string>
    <string name="serial_write">发送</string>
    <string name="serial_mode_txt">Txt</string>
    <string name="serial_mode_hex">Hex</string>
    <string name="serial_serial_port">串口号：</string>
    <string name="serial_baud">波特率：</string>
    <string name="serial_parity">奇偶校验：</string>
    <string name="serial_dataBits">数据位：</string>
    <string name="serial_stopBit">停止位：</string>
    <string name="serial_open_advanced_settings">高级</string>
    <string name="serial_open">开启</string>
    <string name="serial_close">关闭</string>
    <string name="serial_auto">自动</string>
    <string name="serial_send">发送</string>
    <string name="serial_ms">ms</string>
    <string name="serial_default_ms">500</string>
    <string name="serial_edit">编辑</string>
    <string name="serial_del">删除</string>
    <string name="serial_add">新增</string>
    <string name="serial_commit">确定</string>
    <string name="serial_cancel">取消</string>
    <string name="serial_remark">备注：</string>
    <string name="serial_command">命令：</string>
    <string name="serial_del_confirm">确认要删除吗？</string>
    <string name="serial_setting">设置</string>
    <string name="serial_check_update">检查新版本</string>
    <string name="serial_about_us">关于串口调试助手</string>
    <string name="serial_save_log">保存数据记录</string>
    <string name="serial_logs">数据记录</string>
    <string name="serial_logs_clear">清空</string>
    <string name="serial_view_detail">查看</string>
    <string name="serial_features">功能介绍</string>

    <string name="about_author_1">获取更多实用工具、联系作者、反馈与建议</string>
    <string name="about_author_2">请关注微信公众号：sysoutL</string>

    <string name="public_loading">加载中</string>

</resources>