<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@drawable/public_shape_white_corner_5dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serial_parity"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/serial_sp_parity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/serial_parity_array"
            android:popupBackground="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serial_dataBits"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/serial_sp_dataBits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/serial_data_bits_array"
            android:popupBackground="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serial_stopBit"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/serial_sp_stopBit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/serial_stop_bit_array"
            android:popupBackground="@color/black"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/serial_advanced_setting_commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serial_commit"/>

</LinearLayout>