<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">



    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.SerialAssistant.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/icon_back_white"
            app:popupTheme="@style/Theme.SerialAssistant.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/serial_tv_read"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="top"
            android:background="@color/white"
            android:textColor="@color/public_color_6C6C6C"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/public_color_6C6C6C"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serial_read"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="readClearOnClick"
                    android:text="@string/serial_clear"/>

                <RadioGroup
                    android:id="@+id/serial_rg_read_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/serial_rb_read_hex"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/serial_mode_hex"/>
                    <RadioButton
                        android:id="@+id/serial_rb_read_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/serial_mode_txt"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serial_write"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="sendClearOnClick"
                    android:text="@string/serial_clear"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="loadCommand"
                    android:text="@string/serial_load_command"/>

                <RadioGroup
                    android:id="@+id/serial_rg_write_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/serial_rb_write_hex"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/serial_mode_hex"/>
                    <RadioButton
                        android:id="@+id/serial_rb_write_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/serial_mode_txt"/>
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/public_color_6C6C6C"/>

        <RelativeLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/ll_serial_port_setting"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:background="@color/white"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/serial_serial_port"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/serial_sp_port"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/serial_baud"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/serial_sp_baud"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"
                        android:entries="@array/serial_baud_array"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/serial_open_advanced_settings"
                        android:textColor="@color/colorPrimary"
                        android:onClick="advancedSettingOnClick"/>

                    <androidx.appcompat.widget.AppCompatToggleButton
                        android:id="@+id/serial_tb_switch"
                        android:textOn="@string/serial_open"
                        android:textOff="@string/serial_close"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/v_serial_port_border"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/ll_serial_port_setting"
                android:background="@color/public_color_6C6C6C"/>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_below="@+id/v_serial_port_border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/serial_et_send_1"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:imeOptions="actionNext"/>

                    <CheckBox
                        android:id="@+id/serial_cb_send_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="send1OnClick"
                        android:text="@string/serial_send"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/serial_et_send_2"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:imeOptions="actionNext"/>

                    <CheckBox
                        android:id="@+id/serial_cb_send_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="send2OnClick"
                        android:text="@string/serial_send"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/serial_et_send_3"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:imeOptions="actionNext"/>

                    <CheckBox
                        android:id="@+id/serial_cb_send_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="send3OnClick"
                        android:text="@string/serial_send"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/serial_et_send_4"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:imeOptions="actionNext"/>

                    <CheckBox
                        android:id="@+id/serial_cb_send_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="send4OnClick"
                        android:text="@string/serial_send"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/serial_et_send_5"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:imeOptions="actionNext"/>

                    <CheckBox
                        android:id="@+id/serial_cb_send_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="send5OnClick"
                        android:text="@string/serial_send"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/serial_et_send_6"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:imeOptions="actionDone"/>

                    <CheckBox
                        android:id="@+id/serial_cb_send_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="send6OnClick"
                        android:text="@string/serial_send"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/serial_et_delay"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/serial_default_ms"
                        android:inputType="number"
                        android:imeOptions="actionDone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/serial_ms"
                        android:textColor="@color/black"/>

                    <CheckBox
                        android:id="@+id/serial_cb_loop_send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/serial_auto"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


    <Button
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        android:text="返回" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>