<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AboutMeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.SerialAssistant.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.SerialAssistant.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="50dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/public_color_9C9C9C"/>

        <TextView
            android:id="@+id/tv_features"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/serial_features"
            android:onClick="onFeaturesClick"
            app:drawableEndCompat="@drawable/ic_chevron_right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/public_color_9C9C9C"/>

        <TextView
            android:id="@+id/tv_check_update"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/serial_check_update"
            android:onClick="onCheckUpdateClick"
            app:drawableEndCompat="@drawable/ic_chevron_right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/public_color_9C9C9C"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>